objects/ProjectTask__c.object
<CustomObject>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <label>AssignedTo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <externalId>true</externalId>
        <label>ProjectID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLookupParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjectLookupParent</label>
        <referenceTo>ProjectLookupParent__c</referenceTo>
        <relationshipLabel>ProjectTasks</relationshipLabel>
        <relationshipName>ProjectTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectMasterParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjectMasterParent</label>
        <referenceTo>ProjectMasterParent__c</referenceTo>
        <relationshipLabel>ProjectTasks</relationshipLabel>
        <relationshipName>ProjectTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ProjectTask</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>AssignedTo__c</columns>
        <columns>ProjectID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ProjectMasterParent__c</columns>
        <columns>ProjectLookupParent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProjectTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>